tests/NormalTests/paczka1/small_fuzzy/98610177.err
Error in line 7: S397 S397 50,3
Error in line 13: S397 S437 80,7
